@@ -53,6 +53,9 @@ public:
   // Destructor
   virtual ~DumpEpics () ;
 
+  /// Method which is called at the beginning of the calibration cycle
+  virtual void beginCalibCycle(Event& evt, Env& env);
+
   /// Method which is called with event data
   virtual void event(Event& evt, Env& env);
   
